
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int cmsBool ;



__attribute__((used)) static
cmsBool isseparator(int c)
{
    return (c == ' ') || (c == '\t') ;
}
